# llc 国际加码算法Util整合

--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,13 @@
     </properties>
 
     <dependencies>
+        <!--BC库支持-->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.64</version>
         </dependency>
+        <!--BC库支持-->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
